--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "vue",
+  "extends": ["plugin:vue-libs/recommended"], // ,"plugin:vue-libs/recommended"
   "rules": {
     "comma-dangle": [2, "always-multiline"],
     "no-var": "error"
