--- a/package.json
+++ b/package.json
@@ -32,13 +32,12 @@
     "babel-preset-env": "^1.6.0",
     "css-loader": "^0.28.7",
     "eslint": "^4.7.2",
-    "eslint-config-vue": "^2.0.2",
-    "eslint-plugin-vue": "^2.1.0",
+    "eslint-plugin-html": "^3.2.2",
+    "eslint-plugin-vue-libs": "^1.2.1",
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "pre-commit": "^1.2.2",
-    "react-dev-utils": "^4.1.0",
     "style-loader": "^0.18.2",
     "stylelint": "^8.1.1",
     "stylelint-config-standard": "^17.0.0",
@@ -49,6 +48,6 @@
     "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
-
+    "eslint-plugin-vue": "^3.13.0"
   }
 }
